fix(dependencies): Upgrade code from dependencies upgrade